# rst-demo

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  project.rst
docs/source/_static/: custom.css
src/scaffold/: command_line.py
