[tool.poetry]
name = "reStructuredText Demo"
version = "1.0.0"
description = "Demonstrate how to use reStructuredText and Sphinx to generate great documentations."
authors = ["Ke Xue <kent.xue@ascendingdc.com>"]
packages = [
    { include = "**/*", from = "src" },  # This adds src/ to sys.path
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.required]
optional = false

[tool.poetry.group.required.dependencies]
build = "^0.10.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-confluencebuilder = "^2.0.0"
sphinx-autodoc-typehints = "^1.22"

[build-system]
requires = [
    "setuptools>=65",
    "wheel"
]
build-backend = "setuptools.build_meta"
